--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Contacts</h1>
-
+<%= link_to 'Export', contacts_path(format: csv)%>
 <table>
   <thead>
     <tr>
